Add package search screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: license_scanner_ui
-description: A new Flutter project.
+description: License Scanner UI
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
