--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
     sdk: flutter
   provider: ^4.3.2
   http: ^0.12.2
+  smooth_page_indicator: ^0.2.0
+  toast: ^0.1.5
 
 dev_dependencies:
   flutter_test:
