--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  responsive_framework: ^0.0.8
   provider: ^4.3.2
   http: ^0.12.2
   smooth_page_indicator: ^0.2.0
