--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   responsive_framework: ^0.0.8
   provider: ^4.3.2
   http: ^0.12.2
+  dio: ^3.0.10
   smooth_page_indicator: ^0.2.0
   toast: ^0.1.5
 
