--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  intl: ^0.16.1
   cupertino_icons: ^1.0.0
   flutter_platform_widgets: ^0.70.2
   responsive_framework: ^0.0.8
