Improve layout of scan result tile
- Clean imports
- Move models to separate folder

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: license_scanner_ui
-description: License Scanner UI
+description: User interface for License Scanner Service
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
