--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,10 +14,11 @@ dependencies:
   intl: ^0.16.1
   cupertino_icons: ^1.0.0
   responsive_framework: ^0.0.8
+  smooth_page_indicator: ^0.2.0
   provider: ^4.3.2
   http: ^0.12.2
   dio: ^3.0.10
-  smooth_page_indicator: ^0.2.0
+  url_launcher: ^5.7.10
   toast: ^0.1.5
 
 dev_dependencies:
