--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,13 +13,14 @@ dependencies:
     sdk: flutter
   intl: ^0.16.1
   cupertino_icons: ^1.0.0
-  responsive_framework: ^0.0.8
+  responsive_framework: ^0.0.11
   smooth_page_indicator: ^0.2.0
-  provider: ^4.3.2
+  provider: ^4.3.2+2
   http: ^0.12.2
   dio: ^3.0.10
   url_launcher: ^5.7.10
   toast: ^0.1.5
+  badges: ^1.1.4
 
 dev_dependencies:
   flutter_test:
